UI fetching data, not wired up

--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
@@ -16,6 +16,10 @@
       <app-description-editor-container [type]="type"></app-description-editor-container>
     </section>
     <app-inheritance-graph *ngIf="inheritanceView" [inheritable]="inheritanceView"></app-inheritance-graph>
+    <section *ngIf="dataQualityReport">
+      <h2>Data quality</h2>
+      <app-quality-card [qualityReport]="dataQualityReport"></app-quality-card>
+    </section>
     <section *ngIf="hasAttributes">
       <h2>Attributes</h2>
       <app-attribute-table [type]="type"></app-attribute-table>
