--- a/vyne-query-service/src/main/web/src/app/type-viewer/description-editor/description-editor.component.scss
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/description-editor/description-editor.component.scss
@@ -3,6 +3,8 @@
 .wrapper {
   padding: 10px;
   border:1px solid rgba($vyne-lilac, 0.1);
+  height: 100%;
+  border-radius: 4px;
 }
 
 .button-bar {
