fix inline query editor LENS-560 fix results disappearing in query builder after clicking on profiler LENS-561

--- a/vyne-query-service/src/main/web/src/app/tabbed-results-view/tabbed-results-view.component.scss
+++ b/vyne-query-service/src/main/web/src/app/tabbed-results-view/tabbed-results-view.component.scss
@@ -3,7 +3,7 @@
 .results-container {
   height: 100%;
   // padding+box-sizing seemed to fix errant vertical scrollbars
-  padding: 1rem;
+  padding: 1rem 0;
   box-sizing: border-box;
 }
 .results-object-view-list-block {
