sequence diagram is ordered by timestamp, fix Html5Router being too restrictive

--- a/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.scss
@@ -70,6 +70,9 @@ app-query-editor-bottom-bar {
 
 app-tabbed-results-view {
   flex: 1;
+  display: block;
+  height: 100%;
+  margin: 0 1rem;
 }
 
 .partial-results-panel {
