--- a/vyne-query-service/src/main/web/src/app/quality-cards/quality-card.component.scss
+++ b/vyne-query-service/src/main/web/src/app/quality-cards/quality-card.component.scss
@@ -1,7 +1,13 @@
 @import "src/styles";
+
+.flat-card {
+  border: 1px solid rgba($vyne-lilac, 0.4);
+}
+
 .card-container {
   display: flex;
 }
+
 .chart-container, .summary-list-container {
   flex-grow: 1;
   width: 100%;
@@ -28,8 +34,20 @@ $low-score-color: $red-1;
   td {
     padding: 0.5rem 1rem 0.5rem 0;
     border-top: 1px solid $borer-light;
+
+    a {
+      color: unset;
+      text-underline-offset: 0.1rem;
+      text-decoration-color: $borer-light;
+
+      &:hover {
+        text-decoration-color: darken($borer-light, 20%);
+
+      }
+    }
   }
 }
+
 .small-icon {
   font-size: 1rem;
   height: unset;
@@ -42,16 +60,19 @@ $low-score-color: $red-1;
   background-color: rgba($high-score-color, 0.2);
   color: darken($high-score-color, 10);
 }
+
 .medium {
   border-color: $medium-score-color;
   background-color: rgba($medium-score-color, 0.2);
   color: darken($medium-score-color, 10);
 }
+
 .low {
   border-color: $low-score-color;
   background-color: rgba($low-score-color, 0.2);
   color: darken($low-score-color, 10);
 }
+
 .score-container {
   border-radius: 50%;
   border: 4px solid;
@@ -66,7 +87,31 @@ $low-score-color: $red-1;
   .score {
     font-size: 2rem;
   }
+
   .grade {
     font-size: 0.8rem;
   }
+}
+
+.empty-state-message {
+  display: flex;
+  align-items: center;
+  font-size: 0.9rem;
+
+  img {
+    width: 4rem;
+    margin-right: 2rem;
+  }
+}
+
+.subheader {
+  font-size: 0.8rem;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.5rem;
+}
+
+.subheader-text {
+  margin-left: 2rem;
 }
