added display panel with simple remote call stats
LENS-583

--- a/vyne-query-service/src/main/web/src/app/query-panel/taxi-viewer/call-explorer/call-explorer-operation-view.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-panel/taxi-viewer/call-explorer/call-explorer-operation-view.component.scss
@@ -1,6 +1,8 @@
 @import "src/theme";
-@import "call-explorer.component";
 
+:host {
+  padding: 0 1rem;
+}
 app-error-message {
   display: block;
   margin: 1rem 0;
@@ -56,8 +58,6 @@ app-error-message {
 }
 
 .response-code-line {
-
-
   .duration {
     background-color: rgba($vyne-lilac, 0.6);
   }
