when user clicks on a node in the lineage graph, load additional data. resolves LENS-585

--- a/vyne-query-service/src/main/web/src/app/query-panel/query-panel.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-panel.component.html
@@ -8,6 +8,7 @@
         (hasTypedInstanceDrawerClosed)="onCloseTypedInstanceDrawer($event)"
         [type]="selectedTypeInstanceType"
         [dataSource]="selectedTypeInstanceDataSource"
+        [instanceQueryCoordinates]="selectedInstanceQueryCoordinates"
       ></app-typed-instance-panel-container>
     </div>
   </mat-drawer>
