--- a/vyne-query-service/src/main/web/src/app/query-history/query-history.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-history/query-history.component.html
@@ -11,6 +11,7 @@
         (hasTypedInstanceDrawerClosed)="onCloseTypedInstanceDrawer($event)"
         [type]="selectedTypeInstanceType"
         [dataSource]="selectedTypeInstanceDataSource"
+        [instanceQueryCoordinates]="selectedInstanceQueryCoordinates"
       ></app-typed-instance-panel-container>
     </div>
   </mat-drawer>
