--- a/vyne-query-service/src/main/web/src/app/db-connection-editor/db-connection-editor.component.html
+++ b/vyne-query-service/src/main/web/src/app/db-connection-editor/db-connection-editor.component.html
@@ -4,42 +4,35 @@
   </mat-card-header>
   <mat-card-content>
     <div class="form-container">
-      <div class="form-body">
+      <div class="form-body" [formGroup]="connectionDetails">
+        <mat-form-field appearance="outline">
+          <mat-label>Connection name</mat-label>
+          <input matInput formControlName="connectionName" required>
+          <mat-error *ngIf="connectionDetails.controls['connectionName'].invalid">This field is required</mat-error>
+        </mat-form-field>
         <mat-form-field appearance="outline">
           <mat-label>Database type</mat-label>
-          <mat-select [(value)]="connection.connectionType">
-            <mat-option *ngFor="let connectionType of connectionTypes"
-                        [value]="connectionType.connectionType">{{ connectionType.label }}</mat-option>
+          <mat-select (valueChange)="setDriver($event)" formControlName="driver" required>
+            <mat-option *ngFor="let connectionType of drivers"
+                        [value]="connectionType.driverName">{{ connectionType.displayName }}</mat-option>
           </mat-select>
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-          <mat-label>Host</mat-label>
-          <input matInput [(ngModel)]="connection.host">
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-          <mat-label>Port</mat-label>
-          <input matInput type="number" [(ngModel)]="connection.port">
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-          <mat-label>Database name</mat-label>
-          <input matInput [(ngModel)]="connection.database">
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-          <mat-label>Username</mat-label>
-          <input matInput [(ngModel)]="connection.username">
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-          <mat-label>Password</mat-label>
-          <input matInput type="password" [(ngModel)]="connection.password">
+          <mat-error *ngIf="connectionDetails.controls['driver'].invalid">This field is required</mat-error>
         </mat-form-field>
       </div>
+      <form [formGroup]="connectionDetails">
+        <app-dyanmic-form-component *ngFor="let formElement of formElements" [form]="driverParameters"
+                                    [spec]="formElement"></app-dyanmic-form-component>
+      </form>
+
 
       <div class="form-buttons">
-        <button mat-stroked-button>Test connection</button>
+        <button mat-stroked-button (click)="doTestConnection()" [disabled]="!isValid">Test connection</button>
         <div class="spacer"></div>
-        <button mat-flat-button color="primary">Create source</button>
+        <button mat-flat-button color="primary" [disabled]="!isValid" (click)="createConnection()">Create</button>
       </div>
     </div>
-
   </mat-card-content>
+  <mat-progress-bar mode="indeterminate" *ngIf="working"></mat-progress-bar>
+  <div class="test-result-box error-message" *ngIf="!working && hasTestFailure">{{ testResult.errorMessage}}</div>
+  <div class="test-result-box success-message" *ngIf="!working && testSuccessful">Connection tested successfully</div>
 </mat-card>
