--- a/vyne-query-service/src/main/web/src/app/vyne/vyne.component.html
+++ b/vyne-query-service/src/main/web/src/app/vyne/vyne.component.html
@@ -8,8 +8,7 @@
     [opened]="!(isHandset$ | async)">
     <mat-toolbar color="logo">
       <div class="logo">
-        <img src="assets/img/vyne-logo-horizontal-gap.svg">
-<!--        <span>Vyne</span>-->
+        <img src="assets/img/vyne-logo-horizontal-gap.svg" alt="Vyne">
       </div>
 
 
