cherry picking changes from develop

--- a/vyne-query-service/src/main/web/src/app/schema-explorer/schema-explorer.component.html
+++ b/vyne-query-service/src/main/web/src/app/schema-explorer/schema-explorer.component.html
@@ -1,5 +1,5 @@
 <app-header-bar title="Schema Explorer">
-  <div class="add-new" *ngIf="config?.newSchemaSubmissionEnabled">
+  <div class="add-new" *ngIf="config?.server.newSchemaSubmissionEnabled">
     <button mat-stroked-button [matMenuTriggerFor]="appMenu">Add new...</button>
     <!--<mat-icon svgIcon="add_box"></mat-icon>-->
     <!--Add a new one-->
