cherry-pick 0.18: fix UI bugs, missing failed calls in history, and race conditions in CacheAwareOperationInvocationDecorator
 * fix errant scrollbars in schema explorer
 * fix scrollbars in query history
 * UI fixes with scrollbars and layout for large result sets
 * persisted history now includes  failed attempts
 * capture failed attempts in lineage
 * fix race conditions in CacheAwareOperationInvocationDecorator:
     * Mutliple concurrent attempts to load the same data now result in a single operation
     * Errors are correctly propigated back to the caller
     * Race conditions resolved

--- a/vyne-query-service/src/main/web/src/app/query-history/query-list.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-history/query-list.component.scss
@@ -3,6 +3,7 @@
 .list-container {
   width: 400px;
   height: 100%;
+  overflow-y: scroll;
   background-color: $light-purple-grey;
   border-right: 1px solid $light-purple-grey-300;
 }
