--- a/vyne-query-service/src/main/web/src/app/query-history/query-history.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-history/query-history.component.scss
@@ -22,7 +22,8 @@
 }
 
 mat-sidenav-container {
-  height: 100%;
+  height: 10px;
+  flex-grow: 1;
 }
 
 .actions-container {
@@ -37,10 +38,6 @@ mat-sidenav-container {
   display: flex;
   flex-direction: column;
   height: 100%;
-
-  .container {
-    flex-grow: 1;
-  }
 }
 
 .container {
@@ -50,6 +47,11 @@ mat-sidenav-container {
   .results-section {
     flex-grow: 1;
     margin: 10px;
+    // Not really sure why I have to set this.
+    // If a width isn't set here, then the children seem unconstrained and grow forever.
+    // If the width is too high, then flex-grow seems to have no effect.
+    // Setting a small width seems to get overridden by flex-grow, taking up the remaining space.
+    width: 10px;
   }
 }
 
