--- a/vyne-query-service/src/main/web/src/app/service-stats/service-stats.component.scss
+++ b/vyne-query-service/src/main/web/src/app/service-stats/service-stats.component.scss
@@ -15,6 +15,19 @@
   margin-bottom: 1rem;
 }
 
+table {
+  tfoot {
+    tr {
+      background-color: rgba(black, 0.05);
+      line-height: 3rem;
+      th:first-child {
+        padding-left: 1rem;
+      }
+    }
+
+  }
+}
+
 .pill {
   border-radius: 4px;
   padding: 4px 8px;
@@ -28,13 +41,16 @@
   padding-right: 0.5rem;
   margin-right: 0.2rem;
 }
+
 .code_2xx {
   background-color: rgba($vyne-green, 0.5)
 }
+
 .code_3xx {
   background-color: rgba($vyne-lilac, 0.6);
 }
-.code_4xx{
+
+.code_4xx {
   background-color: lighten($bg-error, 10);
 }
 
