fix scrollbars when the system alert banner is shown

--- a/vyne-query-service/src/main/web/src/app/vyne/vyne.component.html
+++ b/vyne-query-service/src/main/web/src/app/vyne/vyne.component.html
@@ -9,7 +9,7 @@
     <mat-toolbar color="logo">
       <div class="logo">
         <img src="assets/img/vyne-logo-horizontal-gap.svg">
-<!--        <span>Vyne</span>-->
+        <!--        <span>Vyne</span>-->
       </div>
 
 
@@ -39,9 +39,14 @@
     </div>
   </mat-sidenav>
   <mat-sidenav-content>
-    <div class="alerts-container">
-      <app-system-alert *ngFor="let alert of alerts" [alert]="alert"></app-system-alert>
+    <div class="app-content-container">
+      <div class="alerts-container">
+        <app-system-alert *ngFor="let alert of alerts" [alert]="alert"></app-system-alert>
+      </div>
+      <div class="app-page-content">
+        <router-outlet></router-outlet>
+      </div>
+
     </div>
-    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
