--- a/vyne-query-service/src/main/web/src/app/type-editor/type-editor.component.scss
+++ b/vyne-query-service/src/main/web/src/app/type-editor/type-editor.component.scss
@@ -1,13 +1,25 @@
 @import "src/theme";
 
 .form-row {
-  display: flex;
+
+  h3 {
+    margin: 0;
+    font-size: 1rem;
+  }
+  .form-item-description-container {
+    display: flex;
+    margin-bottom: 1rem;
+    p:first-child {
+      margin-top: 0;
+    }
+  }
 
   .help-text {
-    font-size: 0.75rem;
+    font-size: 0.9rem;
     margin-right: 2rem;
-    padding-top: 0.5rem;
-    width: 20rem;
+    width: 24rem;
+    overflow: hidden;
+    color: lighten($body, 15%);
   }
 
   mat-form-field, app-type-autocomplete, .form-element {
@@ -19,6 +31,16 @@
 app-description-editor {
   display: block;
   width: 100%;
-  height: 100%;
-  min-height: 8rem;
+  max-height: 10rem;
+  overflow: auto;
+}
+
+.form-buttons {
+  margin-top: 1rem;
+  display: flex;
+  width: 100%;
+}
+
+.spacer {
+  flex-grow: 1;
 }
