--- a/vyne-query-service/src/main/web/src/app/connection-manager/connection-manager.component.html
+++ b/vyne-query-service/src/main/web/src/app/connection-manager/connection-manager.component.html
@@ -5,4 +5,7 @@
     <button mat-menu-item (click)="createNewKafkaConnection()">Kafka connection</button>
   </mat-menu>
 </app-header-bar>
-<router-outlet></router-outlet>
+<div class="page-content">
+  <router-outlet></router-outlet>
+</div>
+
