--- a/vyne-query-service/src/main/web/src/app/connection-manager/connection-list.component.scss
+++ b/vyne-query-service/src/main/web/src/app/connection-manager/connection-list.component.scss
@@ -10,6 +10,10 @@
   align-items: center;
   flex-direction: column;
 }
+
+//noinspection CssInvalidPropertyValue
 .container {
-  max-width: 800px;
+  /* autoprefixer: off */
+  width: -webkit-fill-available;
+  width: -moz-available;
 }
