--- a/vyne-query-service/src/main/web/src/app/cask-viewer/cask-ingestion-errors/cask-ingestion-errors-search-panel/cask-ingestion-errors-search-panel.component.html
+++ b/vyne-query-service/src/main/web/src/app/cask-viewer/cask-ingestion-errors/cask-ingestion-errors-search-panel/cask-ingestion-errors-search-panel.component.html
@@ -2,7 +2,7 @@
   <form>
     <mat-form-field appearance="outline">
       <mat-label>Start Date</mat-label>
-      <input matInput [matDatepicker]="startDate" [formControl]="searchStartDate">
+      <input matInput [matDatepicker]="startDate" [formControl]="searchStartDate" data-e2e-id="start-date">
       <mat-datepicker-toggle matSuffix [for]="startDate">
         <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
       </mat-datepicker-toggle>
@@ -11,7 +11,7 @@
 
     <mat-form-field appearance="outline">
       <mat-label>End Date</mat-label>
-      <input matInput [matDatepicker]="endDate" [formControl]="searchEndDate">
+      <input matInput [matDatepicker]="endDate" [formControl]="searchEndDate" data-e2e-id="end-date">
       <mat-datepicker-toggle matSuffix [for]="endDate">
         <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
       </mat-datepicker-toggle>
@@ -19,6 +19,6 @@
     </mat-form-field>
   </form>
   <div>
-    <button mat-raised-button class="search-ingestion-errors-button" (click)="onSearchCriteriaUpdated()">Search</button>
+    <button mat-raised-button class="search-ingestion-errors-button" (click)="onSearchCriteriaUpdated()" data-e2e-id = "search-button">Search</button>
   </div>
 </div>
